--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Ionic App</title>
+<head>
+  <meta charset="utf-8" />
+  <title>Ionic App</title>
 
-    <base href="/" />
+  <!-- Base href importantissimo per risolvere sempre /styles.css da root -->
+  <base href="/" />
 
-    <meta name="color-scheme" content="light dark" />
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
-    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
-    <!-- add to homescreen for ios -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  </head>
+  <!-- Favicon, meta-theme-color, ecc. se ti serve -->
+  <meta name="theme-color" content="#000000" />
 
-  <body>
-    <app-root></app-root>
-  </body>
+  <!-- Google Fonts: se li usi, ok qui -->
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" 
+    rel="stylesheet"
+  />
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" 
+    rel="stylesheet"
+  />
+
+  <!-- NON inserire manualmente <link href="styles.css"> qui! -->
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
